#cargo-features = ["edition2021"]

[package]
name = "webserver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
tokio-openssl = "0.6"
tokio = { version = "1.5", features = ["macros","rt","net","rt-multi-thread"] }
http = "0.2"
hyper = { version = "0.14", features = ["server","http1" ,"http2"] }
clap = "3.0.0-beta.2"


[profile.release]
opt-level = 3 # 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false
